<resources>
    <string name="app_name">Guardiano</string>


    <!-- MainActivity -->
    <string name="MainActivity_mainLabel">Camera preview.</string>
    <string name="MainActivity_buttonStartVideoLoop">Start video loop</string>
    <string name="MainActivity_buttonStopVideoLoop">Stop video loop</string>
    <string name="MainActivity_buttonTakeShot">Take Shot</string>
    <string name="MainActivity_buttonStartService">Start Service</string>
    <string name="MainActivity_buttonRotatePreviewLeft">Rotate preview</string>

    <string name="MainActivity_videoLoopPaused">Video loop paused.</string>
    <string name="MainActivity_videoLoopRunning">Video loop running.</string>

    <string name="MainActivity_userNameLabel">User name:</string>
    <string name="MainActivity_deviceNameLabel">Device name:</string>
    <string name="MainActivity_motionLevelLabel">Motion level:</string>

    <!-- MainActivity_Menu -->
    <string name="MainActivity_Menu_signOut">Sign out</string>
    <string name="MainActivity_Menu_quitApp">Quit</string>

    <!-- messaggi di errore -->

    <!-- SignInActivity -->
    <string name="SignInActivity_signIn">Sign in</string>

    <!-- PermissionsRequestActivity -->
    <string name="PermissionsRequestActivity_permissionInternet">Internet access</string>
    <string name="PermissionsRequestActivity_permissionCamera">Camera access</string>
    <string name="PermissionsRequestActivity_permissionRecordAudio">Record audio</string>
    <string name="PermissionsRequestActivity_permissionWriteExternalStorage">Write external storage</string>
    <string name="PermissionsRequestActivity_libraryOpenCV">Write external storage</string>

    <string name="PermissionsRequestActivity_permissionGranted">GRANTED</string>
    <string name="PermissionsRequestActivity_permissionDenied">DENIED</string>
    <string name="PermissionsRequestActivity_libraryLoaded">LOADED</string>
    <string name="PermissionsRequestActivity_libraryNotLoaded">NOT LOADED</string>

    <string name="PermissionsRequestActivity_deviceDescriptionExplanation">Please enter a description for this device</string>
    <string name="PermissionsRequestActivity_deviceDescriptionLabel">Device name:</string>


    <!-- Comandi da client -->
    <string name="Incomingcommands___TAKE_SHOT" translatable="false">COMMAND_FROM_CLIENT:::TAKE_PICTURE</string>

    <!-- Risorse stringa generiche -->
    <string name="preferenceFileKey" translatable="false">GUARDIANO_PREFERENCES</string>
    <string name="preference___DeviceDescriptionKey" translatable="false">preference___DeviceDescription</string>

</resources>
