<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:padding="10dp"
        android:rowCount="2">

        <TextView
            android:id="@+id/TXV___MAIN___USERNAME_LABEL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:padding="5dp"
            android:text="@string/MainActivity_userNameLabel"
            tools:text="@string/MainActivity_userNameLabel" />

        <TextView
            android:id="@+id/TXV___MAIN___USERNAME"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:padding="5dp" />

        <TextView
            android:id="@+id/TXV___MAIN___DEVICENAME"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:padding="5dp"
            android:text="" />

        <TextView
            android:id="@+id/TXV___MAIN___DEVICENAME_LABEL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:padding="5dp"
            android:text="@string/MainActivity_deviceNameLabel"
            tools:text="@string/MainActivity_deviceNameLabel" />

    </GridLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TXV___MAIN___STATUS"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/MainActivity_mainLabel"
                android:textAlignment="center" />

            <SurfaceView
                android:id="@+id/SFV___MAIN___CAMERA_PREVIEW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/BTN___MAIN___STARTVIDEOLOOP"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <Button
                android:id="@+id/BTN___MAIN___TAKESHOT"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/MainActivity_buttonTakeShot" />

        </LinearLayout>


    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:padding="10dp"
        android:rowCount="1">

        <TextView
            android:id="@+id/TXV___MAIN___MOTIONLEVEL_LABEL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:padding="5dp"
            android:text="@string/MainActivity_motionLevelLabel"
            tools:text="@string/MainActivity_userNameLabel" />

        <TextView
            android:id="@+id/TXV___MAIN___MOTIONLEVEL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:padding="5dp" />

    </GridLayout>


</LinearLayout>
