<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_permissions_request"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.apps.lore_f.guardiano.PermissionsRequestActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/linearLayout">
    android:orientation="vertical"

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowOrderPreserved="false"
        android:columnCount="2"
        android:rowCount="4">

        <TextView
            android:text="@string/PermissionsRequestActivity_permissionCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TXV___PERMISSIONSREQUEST___PERMISSION_CAMERA"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_gravity="left|top"/>

        <TextView
            android:text="@string/PermissionsRequestActivity_permissionRecordAudio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TXV___PERMISSIONSREQUEST___PERMISSION_RECORD_AUDIO"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_gravity="left|top"/>

        <TextView
            android:text="@string/PermissionsRequestActivity_permissionWriteExternalStorage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TXV___PERMISSIONSREQUEST___PERMISSION_WRITE_EXTERNAL_STORAGE"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_gravity="left|top"/>

        <TextView
            android:text="@string/PermissionsRequestActivity_permissionInternet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TXV___PERMISSIONSREQUEST___PERMISSION_INTERNET"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_gravity="left|top"/>

        <TextView
            android:text="@string/PermissionsRequestActivity_permissionDenied"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TXV___PERMISSIONSREQUEST___PERMISSION_CAMERA_STATUS"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_gravity="left|top"
            android:paddingLeft="5dp" />

        <TextView
            android:text="@string/PermissionsRequestActivity_permissionDenied"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TXV___PERMISSIONSREQUEST___PERMISSION_RECORD_AUDIO_STATUS"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_gravity="left|top"
            android:paddingLeft="5dp"/>

        <TextView
            android:text="@string/PermissionsRequestActivity_permissionDenied"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TXV___PERMISSIONSREQUEST___PERMISSION_WRITE_EXTERNAL_STORAGE_STATUS"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_gravity="left|top"
            android:paddingLeft="5dp"/>

        <TextView
            android:text="@string/PermissionsRequestActivity_permissionDenied"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TXV___PERMISSIONSREQUEST___PERMISSION_INTERNET_STATUS"
            android:layout_column="1"
            android:layout_row="3"
            android:layout_gravity="left|top"
            android:paddingLeft="5dp"/>

    </GridLayout>

    <TextView
        android:text="@string/PermissionsRequestActivity_permissionDenied"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TXV___PERMISSIONSREQUEST___DEVICE_NAME_LABEL"

        android:layout_gravity="left|top"
        android:paddingLeft="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Name"
        android:ems="10"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="74dp"
        android:id="@+id/editText" />

</LinearLayout>



</RelativeLayout>
